--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "framer-motion": "^12.23.9",
+    "lucide-react": "^0.526.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
